--- a/single.html
+++ b/single.html
@@ -373,9 +373,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="tab-head">
 			 <nav class="nav-sidebar">
 		<ul class="nav tabs">
-          <li class="active"><a href="#tab1" data-toggle="tab">Product Description</a></li>
-          <li class=""><a href="#tab2" data-toggle="tab">Additional Information</a></li> 
-          <li class=""><a href="#tab3" data-toggle="tab">Reviews</a></li>  
+          <li class="active"><a href="#tab1" data-toggle="tab">Omschrijving</a></li>
+          <li class=""><a href="#tab2" data-toggle="tab">Product informatie</a></li> 
+          <li class=""><a href="#tab3" data-toggle="tab">Voorbeelden</a></li>  
+		  <li class=""><a href="#tab4" data-toggle="tab">Vraag</a></li>  
 		</ul>
 	</nav>
 	<div class="tab-content one">
@@ -408,7 +409,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <div class="tab-pane text-style" id="tab3">
 
 									 <div class="facts">
-									  <p > There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined </p>
+									  <p > Deze verjaardagslinger is geplastificeerd en bevestigd met origenele eyelets. Deze verjaardagslinger kunt u helemaal aanpassen aan uw wens. De tekst, kleuren, Lettertype en de afbeeldingen. Wilt u een andere afbeelding vul dan de vraagteken en vermeld welke plaatje u wilt op de vraagteken. </p>
 										<ul>
 											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Research</li>
 											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Design and Development</li>
@@ -419,6 +420,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										</ul>     
 							     </div>	
 
+								 </div>
+<div class="tab-pane text-style" id="tab4">
+
+									 <div class="facts">
+									  <p > Deze verjaardagslinger is geplastificeerd en bevestigd met origenele eyelets. Deze verjaardagslinger kunt u helemaal aanpassen aan uw wens. De tekst, kleuren, Lettertype en de afbeeldingen. Wilt u een andere afbeelding vul dan de vraagteken en vermeld welke plaatje u wilt op de vraagteken. </p>
+										<ul>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Research</li>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Design and Development</li>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Porting and Optimization</li>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>System integration</li>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Verification, Validation and Testing</li>
+											<li><span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Maintenance and Support</li>
+										</ul>     
+							     </div>	
  </div>
   
   </div>
